changes for the new java bindings
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193517 13f79535-47bb-0310-9956-ffa450edef68